--- a/markdown/2.md
+++ b/markdown/2.md
@@ -1,8 +1,8 @@
-﻿---
-title: "My First Blog of 2023"
+---
+title: "wtf"
 metaTitle: "My First blog of 2022"
 metaDesc: "How to make a blogging website using Next.js, Markdown and style it using TailwindCSS."
-socialImage: /logo.svg
+socialImage: /cresent.svg
 date: "2022-02-02"
 tags:
   - nextjs
